# akkio-ce-report-app

./: README.md  app.py  chat-explore-api-demo.py  demo_deploy_transform.py  demo_pptx_export.py  prompt_list.xlsx  pyproject.toml
data/: Marketing Campaign Data.csv  Sales_Data_Test.csv
sandbox/: export_ce_outputs.py  prompts.py  refactored_app.py  test.py
sandbox/chat_response/: chart.txt  project_jF4vcd53hUYWLkFYzlqj_taskid_9896e809-ac0c-45cc-9903-7db5696d6fea.txt  table.txt
src/: utils.py
